fix text overlap

--- a/theme/redesign/src/assets/styles/components/Wisdom.scss
+++ b/theme/redesign/src/assets/styles/components/Wisdom.scss
@@ -131,6 +131,7 @@
 .wisdom-row.single.small {
   font-size: 1.4rem;
   line-height: 1.6;
+  max-width: initial;
 }
 
 @keyframes zoomInW {
